--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -851,6 +851,9 @@
           "desc_in_progress": "Em andamento, iniciada em %{start_date}",
           "import_desc": "Importar \"%{file_name}\" de %{source} para a carteira"
         },
+        "preview": {
+          "title": "Prévia da Importação"
+        },
         "settings": {
           "show": {
             "import_name_info_text": "Nomes de Importação são \"traduções\" dos nomes de transação originais da fonte de importação para um nome de transação no Finance MicroManager. Eles são úteis pois muitos nomes, especialmente vindos de transações de cartões de débito ou crédito têm nomes obscuros como por exemplo \"CNC SSP UK LTD\". Isso na verdade veio do Burger King, mas seria quase impossível saber ou lembrar disso apenas olhando o nome original. Nomes de Importação podem ser usados para fazer essa tradução automaticamente e facilitar sua vida.",
@@ -859,6 +862,9 @@
             "sub_header_import_name": "Nomes de Importação (%{count})",
             "title": "Configurações de Importação"
           }
+        },
+        "show": {
+          "title": "Importação"
         }
       },
       "landing": {
