Move menu logic to separate utility file

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -903,6 +903,7 @@
           "categories": "Categories",
           "current_profile": "Profile:",
           "dashboard": "Dashboard",
+          "imports": "Transaction Imports",
           "profile": "My Profile",
           "profiles": "Profiles",
           "reconciliations": "Reconciliations",
