--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -971,6 +971,7 @@
           "categories": "Categorias",
           "current_profile": "Perfil:",
           "dashboard": "Dashboard",
+          "imports": "Importação de Transações",
           "profile": "Meu Perfil",
           "profiles": "Perfis",
           "reconciliations": "Reconciliações",
