--- a/config/locales/controllers.en.yml
+++ b/config/locales/controllers.en.yml
@@ -117,17 +117,17 @@ en:
 
   transaction_predictions:
     create:
-      success: 'Transaction Prediction "%{name}" was successfully created.'
-      error: 'Transaction Prediction could not be created: %{error}'
+      success: 'Transaction Autofill "%{name}" was successfully created.'
+      error: 'Transaction Autofill could not be created: %{error}'
     update:
-      success: 'Transaction Prediction "%{name}" was successfully updated.'
-      error: 'Transaction Prediction could not be updated: %{error}'
+      success: 'Transaction Autofill "%{name}" was successfully updated.'
+      error: 'Transaction Autofill could not be updated: %{error}'
     destroy:
-      success: 'Transaction Prediction "%{name}" was successfully deleted.'
+      success: 'Transaction Autofill "%{name}" was successfully deleted.'
     disable:
-      success: 'Transaction Prediction "%{name}" was successfully disabled.'
+      success: 'Transaction Autofill "%{name}" was successfully disabled.'
     reenable:
-      success: 'Transaction Prediction "%{name}" was successfully re-enabled.'
+      success: 'Transaction Autofill "%{name}" was successfully re-enabled.'
 
   users:
     registrations:
