--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -1214,6 +1214,7 @@
           "ninety_days": "90 dias",
           "only_income": "Apenas Receitas",
           "only_spends": "Apenas Gastos",
+          "search_label": "Buscar Transações",
           "seven_days": "7 dias",
           "thirty_days": "30 dias",
           "transaction_type": "Tipo de Transação",
