--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -24,6 +24,10 @@
         "reconciliation_wallet": {
           "balance_amount_cents": "Balance"
         },
+        "transaction": {
+          "category_id": "Category",
+          "wallet_id": "Wallet"
+        },
         "transaction_automation": {
           "schedule_custom_rule": {
             "first_business_day_of_month": "first business day of month",
@@ -100,6 +104,12 @@
             "attributes": {
               "base": {
                 "cannot_alter_prior_to_reconciliation": "Cannot create, edit, or delete any transactions prior to %{date}, the date of the latest reconciliation"
+              },
+              "category_id": {
+                "must_be_enabled": "must be enabled"
+              },
+              "wallet_id": {
+                "must_be_enabled": "must be enabled"
               }
             }
           },
