--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -43,6 +43,13 @@
         "subcategory": {
           "name": "Nome"
         },
+        "transaction": {
+          "category": "Categoria",
+          "category_id": "Categoria",
+          "name": "Nome",
+          "wallet": "Carteira",
+          "wallet_id": "Carteira"
+        },
         "transaction_automation": {
           "schedule_custom_rule": {
             "first_business_day_of_month": "primeiro dia útil do mês",
@@ -127,7 +134,19 @@
             "attributes": {
               "base": {
                 "cannot_alter_prior_to_reconciliation": "Não é possível criar, alterar ou deletar nenhuma transação anterior a %{date}, data da última reconciliação"
+              },
+              "category_id": {
+                "must_be_enabled": "must be enabled"
+              },
+              "wallet_id": {
+                "must_be_enabled": "must be enabled"
               }
+            },
+            "category_id": {
+              "must_be_enabled": "deve estar habilitada"
+            },
+            "wallet_id": {
+              "must_be_enabled": "deve estar habilitada"
             }
           },
           "user": {
