--- a/config/locales/active_record.en.yml
+++ b/config/locales/active_record.en.yml
@@ -18,6 +18,9 @@ en:
           cancelled: Cancelled
       reconciliation_wallet:
         balance_amount_cents: Balance
+      transaction:
+        category_id: Category
+        wallet_id: Wallet
       transaction_automation:
         transaction_category: Category
         transaction_name: Transaction Name
@@ -68,11 +71,16 @@ en:
           attributes:
             balance_amount_cents:
               cannot_change_on_completed_reconciliation: cannot be changed after reconciliation is finished or cancelled
+
         transaction:
           attributes:
             base:
               cannot_alter_prior_to_reconciliation: >-
                 Cannot create, edit, or delete any transactions prior to %{date}, the date of the latest reconciliation
+            category_id:
+              must_be_enabled: must be enabled
+            wallet_id:
+              must_be_enabled: must be enabled
         user:
           attributes:
             base:
