--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -860,6 +860,11 @@
         }
       },
       "imports": {
+        "action_labels": {
+          "import": "Importar",
+          "match": "Combinar",
+          "skip": "Ignorar"
+        },
         "floating_button_label": "Importar Transações",
         "form": {
           "cancel": "Cancelar",
@@ -884,9 +889,10 @@
           "import_desc": "Importar \"%{file_name}\" de %{source} para a carteira"
         },
         "preview": {
-          "actions_label": "Ações",
+          "actions_label": "Ação",
           "amount_label": "Valor",
           "category_label": "Categoria",
+          "category_placeholder": "-- Categoria --",
           "date_label": "Data",
           "name_label": "Nome",
           "title": "Prévia da Importação"
