--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -101,6 +101,8 @@ pt-BR:
         actions_label: Ação
         blocked_label: Impossível Importar
         import_block_reconciliation_reason: Não é possível importar pois data é anterior à última reconciliação
+        submit_button: Importar Transações
+        cancel_button: Cancelar
       show:
         title: Importação
       settings:
